# status-report

./: .editorconfig  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
basic-report/: status-report.service  status-report.service.example.conf  status-report.sh  status-report.timer
src/: app.ts  config.example.yaml  config.py  gen_report_html.py  gen_report_json.py  main.styl  status-page.jinja  timedelta.d.ts
systemd/: status-report-html.service  status-report-html.timer  status-report-json.service  status-report-json.service.example.conf  status-report-json.timer
tools/: install-systemd.sh
